# python_template

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: quality.yaml  update.yaml
tests/: test_your_module.py
