[tool.poetry]
name = "your-module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.6.1"
pre-commit = ">=3.8.0"
pytest = ">=8.3.2"

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
